[package]
name = "mrrobot"
version = "1.0.0"
authors = ["Kike Fontán (@CosasDePuma) <kikefontanlorenzo@gmail.com>"]
edition = "2018"

[[bin]]
name = "mrrobot"
path = "src/main.rs"

[dependencies]
colored = "1.9.1"
clap = "2.33.0"
regex = "1.3.1"
reqwest = "0.10.0"
yaml-rust = "0.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
