[package]
name = "mrrobot"
version = "1.0.0"
authors = ["Kike Fontán (@CosasDePuma) <kikefontanlorenzo@gmail.com>"]
edition = "2018"

[[bin]]
name = "mrrobot"
path = "src/main.rs"

[dependencies]
# Core
clap = "2.33.0"
colored = "1.9.2"
yaml-rust = "0.4.3"
# Logging
log = "0.4.8"
simplelog = "0.7.4"
# Crypto
base64 = "0.11.0"
hex = "0.4.0"
md5 = "0.7.0"
# Util
regex = "1.3.3"
# Web
reqwest = {version="0.10.1",features=["blocking"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
