[tool.poetry]
name = "mrrobot"
version = "1.0.0"
description = "Just another robot to automate the hacking process"
authors = ["Kike Fontán <kikefontanlorenzo@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "1.4.0"
pillow = "7.0.0"

[tool.poetry.dev-dependencies]
setuptools = "^45.2.0"
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
